fixed horizontal scroll

--- a/pages/Home/Banner.module.scss
+++ b/pages/Home/Banner.module.scss
@@ -1,7 +1,7 @@
 @import "../../common/const.scss";
 
 .root {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   padding: 23vh 0.8rem 20vh;
   background-color: #000000;
