--- a/pages/Home/Community.module.scss
+++ b/pages/Home/Community.module.scss
@@ -3,7 +3,7 @@
 .root {
   background-color: #fff;
   color: unset;
-  width: 100vw;
+  width: 100%;
   cursor: pointer;
   @include block-padding;
 
