--- a/pages/Home/Mechanism.module.scss
+++ b/pages/Home/Mechanism.module.scss
@@ -2,7 +2,7 @@
 
 .root {
   background-color: $background-color;
-  width: 100vw;
+  width: 100%;
   padding: 8rem 0;
 
   .container {
